--- a/.github/workflows/MI-R3P.yml
+++ b/.github/workflows/MI-R3P.yml
@@ -1,5 +1,5 @@
 #修改TNAME: K2P-5.0 中的K2P-5.0为你需要编译的型号，注意名称要与configs/templates/目录下的名字相同
-name: C.K2P-V2
+name: C.RM2100
 
 on:
   workflow_dispatch:
@@ -63,13 +63,12 @@ jobs:
           utcOffset: "+08:00"
       #- name: Run Golang check
       #  run: sh ./scripts/go.sh
-
       #- name: SSH connection to Actions
       #  uses: P3TERX/ssh2actions@v1.0.0
 
       - name: Build Firmware
         env:
-          TNAME: K2P_nano-5.0 #PSG1218 K2P-5.0 K2P K2P_nano K2P_nano-5.0 PSG1208 PSG1218_nano
+          TNAME: MI-R3P
         run: |
           cd /opt/rt-n56u/trunk
           if [ ! -f configs/templates/$TNAME.config ] ; then
@@ -110,50 +109,11 @@ jobs:
           ######################################################################
           #以下选项是定义你需要的功能（y=集成,n=忽略），重新写入到.config文件
           ######################################################################        
-          echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_SERVER=n" >> .config #SOFTETHERVPN
-          echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CLIENT=n" >> .config #SOFTETHERVPN
-          echo "CONFIG_FIRMWARE_INCLUDE_SOFTETHERVPN_CMD=n" >> .config #SOFTETHERVPN
           echo "CONFIG_FIRMWARE_INCLUDE_SFE=y" >> .config #集成SFE加速
           #
-          echo "CONFIG_FIRMWARE_INCLUDE_SHADOWSOCKS=y" >> .config #SS plus+
-          echo "CONFIG_FIRMWARE_INCLUDE_V2RAY=y" >> .config #集成v2ray执行文件（3.8M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
-          echo "CONFIG_FIRMWARE_INCLUDE_TROJAN=y" >> .config #集成trojan执行文件(1.1M左右)，如果不集成，会从网上下载下来执行，不影响正常使用
-          echo "CONFIG_FIRMWARE_INCLUDE_SSOBFS=y" >> .config # simple-obfs混淆插件
-          echo "CONFIG_FIRMWARE_INCLUDE_SSSERVER=n" >> .config #SS server
-          echo "CONFIG_FIRMWARE_INCLUDE_KUMASOCKS=y" >> .config #socks5
+        
           #
-          echo "CONFIG_FIRMWARE_INCLUDE_IPT2SOCKS=y" >> .config
-          echo "CONFIG_FIRMWARE_INCLUDE_MICROSOCKS=y" >> .config
-          echo "CONFIG_FIRMWARE_INCLUDE_SRELAY=n" >> .config #可以不集成
-          echo "CONFIG_FIRMWARE_INCLUDE_TUNSAFE=n" >> .config #TUNSAFE
-          echo "CONFIG_FIRMWARE_INCLUDE_DNSFORWARDER=n" >> .config #DNSFORWARDER
-          #
-          echo "CONFIG_FIRMWARE_INCLUDE_FRPC=n" >> .config #内网穿透FRPC
-          echo "CONFIG_FIRMWARE_INCLUDE_FRPS=n" >> .config #内网穿透FRPS
-          #
-          echo "CONFIG_FIRMWARE_INCLUDE_ADBYBY=y" >> .config #adbyby plus+
-          echo "CONFIG_FIRMWARE_INCLUDE_KOOLPROXY=n" >> .config #KP广告过滤
-          #
-          echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNS=y" >> .config #smartdns
-          echo "CONFIG_FIRMWARE_INCLUDE_SMARTDNSBIN=n" >> .config #smartdns二进制文件
-          echo "CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=n" >> .config
-          #
-          echo "CONFIG_FIRMWARE_INCLUDE_ALIDDNS=y" >> .config #阿里DDNS
-          echo "CONFIG_FIRMWARE_INCLUDE_ZEROTIER=n" >> .config #zerotier ~1.3M
-          #       
-          echo "CONFIG_FIRMWARE_INCLUDE_CADDY=n" >> .config #在线文件管理服务
-          echo "CONFIG_FIRMWARE_INCLUDE_CADDYBIN=n" >> .config #集成caddu执行文件，此文件有13M,请注意固件大小。如果不集成，会从网上下载下来执行，不影响正常使用
-          #     
-          echo "CONFIG_FIRMWARE_INCLUDE_WYY=n" >> .config #网易云解锁
-          echo "CONFIG_FIRMWARE_INCLUDE_WYYBIN=n" >> .config #网易云解锁GO版本执行文件（4M多）注意固件超大小,不集成会自动下载
-          #校园网相关
-          echo "CONFIG_FIRMWARE_INCLUDE_MENTOHUST=n" >> .config #MENTOHUST
-          echo "CONFIG_FIRMWARE_INCLUDE_SCUTCLIENT=n" >> .config #SCUTCLIENT
-          echo "CONFIG_FIRMWARE_INCLUDE_NJIT_CLIENT=n" >> .config
-          echo "CONFIG_FIRMWARE_INCLUDE_MINIEAP=n" >> .config
-          echo "CONFIG_FIRMWARE_INCLUDE_DOGCOM=n" >> .config
-          echo "CONFIG_FIRMWARE_INCLUDE_NAPT66=n" >> .config
-          #校园网相关
+          echo "CONFIG_FIRMWARE_INCLUDE_ADGUARDHOME=y" >> .config
           #########################################################################################
           #自定义添加其它功能请参考源码configs/templates/目录下的config文件。按照上面的格式添加即可
           #格式如下：
@@ -161,8 +121,8 @@ jobs:
           #echo "自定义项=y" >> .config
           #########################################################################################
           sudo ./clear_tree
-          fakeroot ./build_firmware_modify $TNAME 0
-          sudo mv -f images/*.trx /opt/images/${TNAME}_V2T_${{ steps.current-time.outputs.formattedTime }}.trx
+          sudo ./build_firmware_modify $TNAME 0
+          sudo mv -f images/*.trx /opt/images/${TNAME}_ChongshengB_${{ steps.current-time.outputs.formattedTime }}.trx
           echo "FNAME=$TNAME" >> $GITHUB_ENV
       - name: Organize files
         id: organize
@@ -201,7 +161,7 @@ jobs:
         if: steps.cowtransfer.outputs.status == 'success'
         run: |
           git pull origin master
-          sed "44c * 当前最新版本:${FNAME}.${{ steps.current-time.outputs.formattedTime }}.trx  最后编译时间: $(date -u -d '+8 hour' '+%Y-%m-%d %H:%M:%S')  下载地址: [奶牛快传](${DOWNLOADURL})  [WeTransfer](${DOWNLOADURL2})" README.md -i
+          sed "42c * 当前最新版本:${FNAME}.${{ steps.current-time.outputs.formattedTime }}.trx  最后编译时间: $(date -u -d '+8 hour' '+%Y-%m-%d %H:%M:%S')  下载地址: [奶牛快传](${DOWNLOADURL})  [WeTransfer](${DOWNLOADURL2})" README.md -i
           git config user.name  Robot
           git config user.email github-actions@github.com
           git commit -m "update README.md" -a
